--- a/structure/homePage.css
+++ b/structure/homePage.css
@@ -6,6 +6,9 @@ body {
     max-width: 90%;
     min-width: 1043px;
     margin: 0 auto;
+    background-image: url('./homeImages/fireGlow.jpg');
+    background-repeat: none;
+    background-size: 100%;
 }
 
 header{
@@ -16,7 +19,7 @@ header{
     -webkit-align-items: center;
     border: solid black;
     border-radius: 20px 20px 0 0;
-    width: 80%;
+    width: 79.5%;
     height: 90px;
     /*background-color: rgba(255, 97, 0, 0.5);*/
     box-shadow: 10px 0 15px #888888;
@@ -27,15 +30,17 @@ header{
     }
 
 #logo{
-    width: 150px;
-    height: 150px;
+    width: 180px;
+    height: 180px;
     margin-right: 100px;
     margin-left: 100px;
+    border-radius: 90px;
 }
 
 h1{
   font-size: 4em;
   font-family: 'Black Ops One', cursive;
+  cursor: url("bml.gif"), auto;
 }
 
 section{
@@ -46,6 +51,7 @@ section{
     box-shadow: 10px 0 15px #888888;
     width: 89.2%;
 }
+
 aside{
     width: 150px;
     border-bottom: solid rgb(76,11,122);
@@ -58,10 +64,6 @@ aside{
     -webkit-align-items: center;
     background-color: rgb(76,11,122);
 
-}
-
-ul {
-  /*position: fixed;*/
 }
 
 .nav {
@@ -77,11 +79,21 @@ ul {
   padding-top: 5px;
   background-color: black;
   color: white;
+  cursor: pointer;
 }
+
 article{
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+  text-align: center;
   width: 85%;
   height: 800px;
   border: solid;
+  background-image: url('./homeImages/chalkboard.jpg');
+  background-repeat: none;
+  background-size: 900px 800px;
 }
 
 footer{
@@ -117,6 +129,7 @@ footer{
   text-align: left;
 
 }
+
 .footerNav{
     display: -webkit-flex;
     -webkit-flex-direction: column;
@@ -127,7 +140,14 @@ footer{
 
 .footerTitle{
   font-size: 1.3em;
+  border: none;
+  margin-left: 25px;
+  margin-right: 25px;
+  list-style: none;
+  margin-bottom: 10px;
+  color: white;
 }
+
 .footerLink{
   border: none;
   margin-left: 25px;
@@ -135,4 +155,5 @@ footer{
   list-style: none;
   margin-bottom: 10px;
   color: white;
+  cursor: pointer;
 }
