add webkit to vote and contact

--- a/contactPage/contact.css
+++ b/contactPage/contact.css
@@ -2,27 +2,41 @@
 .contactSect {
 	    display: -webkit-flex;
 	    flex-direction: row;
-    -webkit-justify-content: flex-start;
-    box-shadow: 10px 0 15px #888888;
+    	-webkit-justify-content: flex-start;
+    	display: flex;
+	    -webkit-flex-direction: row;
+    	justify-content: flex-start;
+    	/*box-shadow: 10px 0 15px #888888;*/
 }
 
 .contactDiv {
 	   display: -webkit-flex;
 	   flex-direction: column;
-    box-shadow: 10px 0 15px #888888;
-	width: 100%;
+	   display: flex;
+	   -webkit-flex-direction: column;
+	   justify-content: flex-start;
+	   -webkit-justify-content: flex-start;
+    	/*box-shadow: 10px 0 15px #888888;*/
+			/*width: 100%;*/
 }
 
 .formArti {
 	display: -webkit-flex;
   -webkit-flex-direction: column;
   -webkit-justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  -webkit-align-self: flex-start;
+  font-family: 'Gochi Hand', cursive;
 	width: 787px;
 }
 
 form {
 	display: flex;
 	flex-direction: column;
+	display: -webkit-flex;
+	-webkit-flex-direction: column;
 	width: 500px;
 }
 
@@ -36,6 +50,7 @@ label {
 	width: auto;
 	margin-top: 10px;
 	align-self: flex-start;
+	-webkit-align-self: flex-start;
 }
 
 textarea {
@@ -46,12 +61,17 @@ textarea {
 	width: 50px;
 	margin-top: 10px;
 	align-self: flex-start;
+	-webkit-align-self: flex-start;
+	font-family: 'Gochi Hand', cursive;
 }
 
 .divInner {
 	display: flex;
+	display: -webkit-flex;
 	align-self: flex-start;
+	-webkit-align-self: flex-start;
 	flex-direction: column;
+	-webkit-flex-direction: column;
 	margin-left: 100px;
 }
 
@@ -65,5 +85,6 @@ textarea {
 	font-size: 1.25em;
 	width: 500px;
 	align-self: center;
+	-webkit-align-self: center;
 	text-align: left;
 }
