--- a/votePage/styles.css
+++ b/votePage/styles.css
@@ -1,6 +1,4 @@
 .image{
-  -webkit-display: flex;
-  -webkit-flex-direction:column;
   display: flex;
   flex-direction:column;
   height: 250px;
@@ -19,20 +17,16 @@
 }
 
 .button-p{
-  -webkit-display: flex;
-  -display: flex;
+  display: flex;
   /*width: 80px;*/
-  -webkit-flex-direction:row;
   flex-direction:row;
   /*margin: 200px;*/
   /*align-self:flex-end;*/
 }
 .outerDiv{
-  -webkit-display: flex;
-  -webkit-flex-direction: column;
   display: flex;
   flex-direction: column;
-  margin: 50px;
+  margin: 20px;
   /*border:solid;*/
   height: 300px;
   width: 200px;
@@ -43,6 +37,7 @@
   color: white;
   font-family: 'Gochi Hand', cursive;
   font-size: 20px;
+  border-radius: 15px;
   background-color: rgba(0,0,0,.8);
 }
 
@@ -57,16 +52,13 @@ p{
 }
 
 article{
-  -webkit-display: flex;
-  -webkit-flex-direction:row;
-  -webkit-flex-wrap: wrap;
   display: flex;
   flex-direction:row;
-  flex-wrap: wrap;
-  max-height: inherit;
+  flex-wrap:wrap;
   max-width: inherit;
   height: 1600px;
   background-size: 1600px, 800px;
+  overflow: scroll;
 }
 
 aside{
