add heart rating images and basic events

--- a/contactPage/contact.css
+++ b/contactPage/contact.css
@@ -99,3 +99,25 @@ span {
 	text-decoration: underline;
 	text-align: left;
 }
+
+/*CAMP RATING*/
+.rateTitle {
+	color: white;
+	font-size: 2em;
+}
+
+.ratings {
+	display: flex;
+	flex-direction: column;
+}
+
+.rateHearts {
+	display: flex;
+	flex-direction: row;
+	width: 200px;
+	justify-content: space-around;
+}
+
+.hearts {
+	border:solid white;
+}
