--- a/aboutPage/about.css
+++ b/aboutPage/about.css
@@ -5,8 +5,23 @@
 }
 
 p3{
-  font-family: 'Pacifico', cursive;
-  font-size: 2em;
+  font-family: 'Indie Flower', cursive;
+  font-size: 1.3em;
   color: white;
-  width: 500px;
+  width: 700px;
+  margin-bottom: 20px;
+}
+article{
+  overflow: scroll;
+}
+
+img{
+  width: 300px;
+  height: 300px;
+  border:solid white;
+  border-width: 2px 2px 10px 2px;
+}
+#moopImg{
+  height: 100px;
+  width: 600px;
 }
