--- a/structure/homePage.css
+++ b/structure/homePage.css
@@ -41,7 +41,7 @@ header{
     }
 
 #logo{
-  z-index: 2;
+    z-index: 2;
     width: 100px;
     height: 100px;
     margin-top: -60px;
@@ -61,6 +61,7 @@ h1{
 }
 
 section{
+    box-sizing: border-box;
     display: -webkit-flex;
     -webkit-flex-direction: row;
     -webkit-justify-content: center;
@@ -81,16 +82,19 @@ section{
     -webkit-flex-direction: column;
     -webkit-justify-content: center;
     -webkit-align-items: center;
+    -webkit-align-self: flex-start;
+    -webkit-align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-self: flex-start;
+    align-items: center;
 }
 
 aside{
-  padding-top: 40px;
-  margin-top: -52px;
+    padding-top: 40px;
+    margin-top: -52px;
     width: 155px;
     /*border-bottom: solid rgb(76,11,122);
     border-top: solid rgb(76,11,122);
@@ -101,14 +105,13 @@ aside{
     display: -webkit-flex;
     display: flex;
     -webkit-flex-direction: column;
+    flex-direction: column;
     -webkit-justify-content: center;
+    justify-content: center;
     -webkit-align-items: center;
     -webkit-align-self: flex-start;
-
-    flex-direction: column;
-    justify-content: center;
     align-self: flex-start;
-
+    -webkit-align-items: center;
     align-items: center;
     background-color: rgb(76,11,122);
     margin-left: 20px;
@@ -150,12 +153,12 @@ article{
 }
 
 footer{
-  /*width: 106.8%;*/
-  height: 150px;
-  border: solid;
-  border-radius: 0 0 20px 20px;
-  box-shadow: 10px 0 15px #888888;
-  display: -webkit-flex;
+    box-sizing: border-box;
+    height: 150px;
+    border: solid;
+    border-radius: 0 0 20px 20px;
+    box-shadow: 10px 0 15px #888888;
+    display: -webkit-flex;
     -webkit-flex-direction: row;
     -webkit-justify-content: center;
     -webkit-align-items: center;
