--- a/votePage/votestyles.css
+++ b/votePage/votestyles.css
@@ -1,9 +1,13 @@
+
+
 .image{
   display: flex;
   flex-direction:column;
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
   height: 250px;
   width: 200px;
-  background-size: 250px, 200px;
+  background-size: cover;
   background-repeat: no-repeat;
   /*border:solid;*/
 
@@ -11,15 +15,19 @@
 
 
 .button-p{
+  display: -webkit-flex;
   display: flex;
   /*width: 80px;*/
   flex-direction:row;
+  -webkit-flex-direction: row;
   /*margin: 200px;*/
   /*align-self:flex-end;*/
 }
 .outerDiv{
   display: flex;
   flex-direction: column;
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
   margin: 20px;
   /*border:solid;*/
   height: 300px;
@@ -28,13 +36,27 @@
 }
 
 .ingredients{
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
   color: white;
   font-family: 'Gochi Hand', cursive;
   font-size: 20px;
-  border-radius: 15px;
+  border-radius: 0 0 15px 15px;
   background-color: rgba(0,0,0,.6);
 }
 
+ul{
+  margin-top: 0;
+  /*width: 100%;*/
+  height: 100%;
+  padding-right: 10px;
+  padding-top: 20px;
+
+}
 .voteComplete{
   background-color: rgba(0,0,0,.8);
   height: 200px;
@@ -44,12 +66,16 @@
 
 p{
   /*border:solid;*/
+  /*width: inherit;*/
 }
 
 #sBox{
   display: flex;
   flex-direction: row;
+  display: -webkit-flex;
+  -webkit-flex-direction:row;
   justify-content: flex-end;
+  -webkit-justify-content: flex-end;
   width: 100%;
   /*border:solid;*/
 }
@@ -64,19 +90,27 @@ p{
 #images{
   display: flex;
   flex-direction:row;
+  display: -webkit-flex;
+  -webkit-flex-direction:row;
   flex-wrap:wrap;
+  -webkit-flex-wrap:wrap;
   justify-content: center;
+  -webkit-justify-content: center;
   width: inherit;
   height: inherit;
   align-items: flex-start;
+  -webkit-align-items: flex-start;
   /*border: solid;*/
-  align-self:flex-start;
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
 }
 
 #voteCopy{
   display: flex;
   flex-direction: column;
+  display: -webkit-flex;
   flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
   justify-content: flex-start;
   -webkit-justify-content: flex-start;
   word-wrap: break-word;
@@ -89,6 +123,7 @@ p{
   border-radius: 15px;
   background-color: rgba(0,0,0,.1);
   /*border: solid;*/
+  margin-bottom: 20px;
 }
 
 
@@ -99,7 +134,11 @@ p{
 #contentSection{
   display: flex;
   flex-direction: column;
-  flex-wrap:wrap;
+  display: -webkit-flex;
+  -webkit-flex-direction: column;
+  -webkit-flex-wrap: wrap;
+  -webkit-align-items: flex-start;
+  flex-wrap: wrap;
   align-items: flex-start;
   border: solid;
 }
@@ -108,11 +147,17 @@ p{
 #drinks{
   display: flex;
   flex-direction:row;
+  display: -webkit-flex;
+  -webkit-flex-direction: row;
   overflow-y: scroll;
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  -webkit-justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-align-items: flex-start;
   width: 98%;
   height:800px;
+  margin-bottom: 20px;
   /*border: solid white;*/
 }
