--- a/votePage/votestyles.css
+++ b/votePage/votestyles.css
@@ -3,8 +3,9 @@
   flex-direction:column;
   height: 250px;
   width: 200px;
-  background-size: 250px, 200px;
+  background-size: cover;
   background-repeat: no-repeat;
+
   /*border:solid;*/
 
 }
@@ -92,9 +93,9 @@ p{
 }
 
 
-#drink4{
+/*#drink4{
   background-size: 350px, 300px;
-}
+}*/
 
 #contentSection{
   display: flex;
