--- a/gamePage/game.css
+++ b/gamePage/game.css
@@ -64,7 +64,7 @@ p{
   color: white;
   font-size: 2em;
   width: 500px;
-  height:200px;
+  height:50px;
   border: none;
 }
 #inputs{
@@ -110,4 +110,15 @@ p2{
 
 video{
   margin-top: 20px;
+}
+
+button{
+  margin-top: 0px;
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  background-color: rgb(255, 230, 163);
+  color: black;
+  border-color: black;
 }
