--- a/contactPage/contact.css
+++ b/contactPage/contact.css
@@ -23,13 +23,15 @@
 
 #newBorder{
 	display: flex;
+	display: -webkit-flex;
 	flex-direction:row;
 	justify-content:space-between;
+	-webkit-flex-direction:row;
+	-webkit-justify-content:space-between;
 	width: 95%;
-/*	border: solid;*/
-	border-color: red;
+	/*border: solid;*/
+	/*border-color: red;*/
 	margin-bottom: 20px;
-
 }
 
 .formArti {
@@ -39,13 +41,15 @@
   justify-content: flex-start;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  -webkit-justify-content: flex-start;
   -webkit-align-self: flex-start;
+  align-self: flex-start;
   font-family: 'Gochi Hand', cursive;
 /*  border: solid;*/
   width: 95%;
 /*  overflow-y: scroll;*/
   align-items:center;
+  -webkit-align-items:center;
 }
 
 form {
@@ -53,7 +57,7 @@ form {
 	flex-direction: column;
 	display: -webkit-flex;
 	-webkit-flex-direction: column;
-	width: 500px;
+	/*width: 500px;*/
 }
 
 input {
@@ -88,8 +92,10 @@ textarea {
 	align-self: flex-start;
 	flex-direction: column;
 	-webkit-flex-direction: column;
-	margin-left: 200px;
+	margin-left: 20px;
+	width: 60%;
 /*	border: solid;*/
+/*border: solid white;*/
 }
 
 .responseP {
@@ -100,7 +106,7 @@ textarea {
 .messageInstruct {
 	color: white;
 	font-size: 1.25em;
-	width: 500px;
+	width: 80%;
 	align-self: flex-start;
 	-webkit-align-self: flex-start;
 	text-align: left;
@@ -122,7 +128,7 @@ span {
 	display: -webkit-flex;
 	flex-direction: row;
 	-webkit-flex-direction: row;
-	width: 70%;
+	width: 90%;
 	height: 250px;
 	border-top: solid white;
 	border-bottom: solid white;
@@ -142,16 +148,18 @@ span {
 }
 
 #name{
- width: 180px;
+ width: 150px;
+ height: 30px;
  margin-right: 10px;
 
 }
 
 #userInput{
-	width: 180px;
+	width: 150px;
 	height: 200px;
 	resize: none;
   overflow: auto;
+  margin-right: 10px;
 }
 
 #commentButton{
@@ -169,6 +177,8 @@ span {
 #commentsMade{
 	display: flex;
 	flex-direction: column;
+	display: -webkit-flex;
+	-webkit-flex-direction: column;
 	border: solid white;
 	width: 90%;
 	height: 80%;
@@ -193,6 +203,9 @@ span {
 #formButt {
 	display: flex;
 	flex-direction: column;
+	display: -webkit-flex;
+	-webkit-flex-direction: column;
+	width:30%;
 }
 
 /*CAMP RATING*/
@@ -202,19 +215,25 @@ span {
 }
 
 .ratings {
-	margin-right: 200px;
+	/*margin-right: 200px;*/
 
 /*	border: solid;*/
 	display: flex;
 	flex-direction: column;
 	justify-content:center;
+	display: -webkit-flex;
+	-webkit-flex-direction: column;
+	-webkit-justify-content:center;
 }
 
 .rateHearts {
 	display: flex;
 	flex-direction: row;
+	display: -webkit-flex;
+	-webkit-flex-direction: row;
 	width: 200px;
 	justify-content: space-around;
+	-webkit-justify-content: space-around;
 }
 
 .hearts {
@@ -224,8 +243,11 @@ span {
 #ratingsimage{
 	height: 300px;
 	width: 300px;
+	border: solid white;
+	border-width: 2px 2px 15px 2px;
 }
 
 #rateDiv{
 	align-self:center;
+	-webkit-align-self:center;
 }
