add random color generator add way to set opacity add random chart colors close #93

--- a/votePage/votestyles.css
+++ b/votePage/votestyles.css
@@ -104,6 +104,8 @@ p{
   /*border: solid;*/
   align-self: flex-start;
   -webkit-align-self: flex-start;
+  height: inherit;
+  width: inherit;
 }
 
 #voteCopy{
@@ -164,6 +166,6 @@ p{
 }
 
 #myChart{
-  height: 400px;
-  width: 50%;
+  height: inherit;
+  width: inherit;
 }
