--- a/aboutPage/about.css
+++ b/aboutPage/about.css
@@ -12,7 +12,7 @@ p3{
   width: 650px;
 }
 article{
-  overflow: scroll;
+  overflow-y: scroll;
   display: flex;
     flex-direction: column;
     justify-content: space-between;
